[gd_scene load_steps=7 format=3 uid="uid://c0kwqqja08e8o"]

[ext_resource type="Script" uid="uid://c3i47ndxs386l" path="res://scripts/turret.gd" id="1_el7wl"]
[ext_resource type="PackedScene" uid="uid://gxt5ai0b55nd" path="res://scenes/projectile.tscn" id="2_485p4"]
[ext_resource type="Texture2D" uid="uid://c3vfbkm2om0i8" path="res://assets/sprites/structure/Singe.png" id="3_485p4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_485p4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_el7wl"]
radius = 158.0

[sub_resource type="CircleShape2D" id="CircleShape2D_485p4"]
radius = 18.1108

[node name="Turret" type="Area2D"]
script = ExtResource("1_el7wl")
projectile_scene = ExtResource("2_485p4")

[node name="Button" type="Button" parent="."]
visible = false
offset_left = -14.0
offset_top = -16.0
offset_right = 14.0
offset_bottom = 16.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_485p4")
flat = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("3_485p4")

[node name="FiringCooldown" type="Timer" parent="."]

[node name="FiringRange" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_el7wl")

[node name="BuildRestriction" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BuildRestriction"]
shape = SubResource("CircleShape2D_485p4")

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Upgrade 1"

[node name="Button2" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Upgrade 2"

[node name="Button3" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Upgrade 3"

[connection signal="mouse_exited" from="." to="." method="hide_upgrade_menu"]
[connection signal="pressed" from="Button" to="." method="show_upgrade_menu"]
